# Viridian

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
cmd/vd/: root.go
vd-cli/: Cargo.toml
vd-core/: Cargo.toml
vd-core/src/: config.rs  error.rs  lib.rs
vd-llm/: Cargo.toml
vd-llm/src/: lib.rs  ollama.rs  provider.rs  types.rs
vd-mcp/: Cargo.toml
vd-memory/: Cargo.toml
vd-tools/: Cargo.toml
