[package]
name = "vd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace    = true
serde_json.workspace = true
toml.workspace     = true
anyhow.workspace   = true
thiserror.workspace = true
dirs.workspace     = true
tokio.workspace    = true
async-trait.workspace = true
tracing.workspace  = true
vd-llm.workspace   = true
vd-tools.workspace = true
vd-memory.workspace = true
vd-mcp.workspace   = true
