[package]
name    = "vd-llm"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio.workspace        = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
async-trait.workspace  = true
anyhow.workspace       = true
thiserror.workspace    = true
